Fix Odd Spacing in Github Link

--- a/src/index.css
+++ b/src/index.css
@@ -270,7 +270,6 @@ footer a:hover {
 footer .icon-github {
 	fill: rgba(255, 255, 255, 0.6);
 	height: 14px;
-	margin: 0 4px 0 0;
 	width: auto;
 }
 
